# Qt-

./: .gitignore  README.md  hello_world.cpp
Downloader/: Downloader.pro  downloadbar.cpp  downloadbar.h  mainwindow.cpp  mainwindow.h  pathselect.cpp  pathselect.h  pathselect.ui
Downloader_Ver2/: Downloader.pro  Downloader.pro.user.93c473f  Resourse.qrc  cellelem.cpp  cellelem.h  closedialog.cpp  closedialog.h  downloaddialog1.cpp  downloaddialog1.h  downloaddialog2.cpp  downloaddialog2.h  downloader.cpp  downloader.h  get.cpp  get.h  helpdialog.cpp  helpdialog.h  line_edit.cpp  line_edit.h  logindialog.cpp  logindialog.h  main.cpp  mainwidget.cpp  mainwidget.h  progressbar.cpp  progressbar.h  toolwidget.cpp  toolwidget.h  widget.cpp  widget.h
Downloader_Ver2/build-core-Qt_6_3_1_MinGW_64_bit_temporary-Release/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  qtcsettings.cmake
Downloader_Ver2/core/: CMakeLists.txt  downloader.cpp  downloader.h  get.cpp  get.h  main.cpp
build-Downloader-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.Downloader.Debug  object_script.Downloader.Release  ui_mainwidget.h
build-Downloader-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_cellelem.cpp  (+5 more)
build-Downloader-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwidget.h
build-Downloader-Desktop_Qt_6_3_1_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release
downloader_core/: CMakeLists.txt  downloader.cpp  downloader.h  get.cpp  get.h  main.cpp
(+1340 files in other folders)
